redact (0.6.2); urgency=low;
  * Minor code improvements and clean up.
  * Improved the project's documentation.
  * Fixed a bug in wipe_acct() where memory was not freed if fopen() 
    failed to open the log file. 
  * Changed several functions to make them easier to be re-used in future 
    projects.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sat, 17 Mar 2018 15:55:02 -0500

redact (0.6.1); urgency=low;
  * Changed error messages to be more helpful and verbose.
  * Changed the wipe_* functions to return void and exit on unrecoverable
    error.
  * Fixed a bug in that caused the program to exit prematurely due to a
    misplaced call to exit().

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Tue, 27 Feb 2018 10:55:06 -0600

redact (0.6.0); urgency=low;
  * Added a function to generate temporary file names in the same directory
    as a given log file. This way we do not have to change directories in 
    order to avoid failing to replace the log file because rename() cannot
    move files across different partitions. 
  * Changed the way that temporary files are created. Temporary files are
    now created with random names.
  * Changed several functions to take the log file as a parameter instead
    of relying on the pre-processor defines.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Sun, 25 Feb 2018 06:12:48 -0600

redact (0.5.2); urgency=low;
  * Added additional error checking.
  * Cleaned up comments in the code.
  * Fixed a bug in wipe_fail which printed out incorrect information when
    verbose mode is enabled.
  * Fixed a bug in wipe_auth() that caused some log entries to not be wiped
  * Changed the name of the args structure member acct to acctlog to
    make the naming of args members more consistent.

  -- Bryan Hawkins <spcnvdrr@protonmail.com> Wed, 21 Feb 2018 12:22:09 -0600

redact (0.5.1); urgency=low;
  * Fixed an error in the wipe_last() where it failed to wipe every
    matching entry in the lastlog file.